QUrl will make the host lowercase and mess with the hash look-up

This should work for now, could consider a more holistic approach some
day.

BUG: 389186